# ipapp-client

./: .gitignore  README.md  pyproject.toml
src/ipapp/: __init__.py  client.py
src/ipapp.egg-info/: PKG-INFO
tests/: test_ipapp.py
