[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ipapp"
version = "0.1.0"
description = "Tiny ip.app client – query your IP, ASN, location, timezone & more."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Fili", email = "code@ip.app"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/fili/ipapp-client"
Repository = "https://github.com/fili/ipapp-client"

[project.scripts]
ipapp = "ipapp.__main__:main"

# --- src-layout hook ---
[tool.setuptools.packages.find]
where = ["src"]
